fixed spacing issues between the comments and replies

--- a/src/output.css
+++ b/src/output.css
@@ -554,6 +554,10 @@ video {
   display: none;
 }
 
+.-mt-4 {
+  margin-top: -1rem;
+}
+
 .ml-14 {
   margin-left: 3.5rem;
 }
@@ -572,6 +576,10 @@ video {
 
 .h-10 {
   height: 2.5rem;
+}
+
+.h-12 {
+  height: 3rem;
 }
 
 .w-10 {
@@ -722,10 +730,6 @@ video {
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.filter {
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 body {
